Issue 1633 (#130)
* issue-1633 spring boot changes

Signed-off-by: JanardhanBS-SyncByte <janardhan@syncbyte.in>

* issue-1633 spring boot changes

Signed-off-by: JanardhanBS-SyncByte <janardhan@syncbyte.in>

* issue-1633 spring boot changes

Signed-off-by: JanardhanBS-SyncByte <janardhan@syncbyte.in>

* issue-1633 spring boot changes

Signed-off-by: JanardhanBS-SyncByte <janardhan@syncbyte.in>

* issue-1633 spring boot changes

Signed-off-by: JanardhanBS-SyncByte <janardhan@syncbyte.in>

* issue-1633 spring boot changes

Signed-off-by: JanardhanBS-SyncByte <janardhan@syncbyte.in>

* issue-1633 spring boot changes

Signed-off-by: JanardhanBS-SyncByte <janardhan@syncbyte.in>

* issue-1633 spring boot changes

Signed-off-by: JanardhanBS-SyncByte <janardhan@syncbyte.in>

* issue-1633 spring boot changes

Signed-off-by: JanardhanBS-SyncByte <janardhan@syncbyte.in>

---------

Signed-off-by: JanardhanBS-SyncByte <janardhan@syncbyte.in>